<resources>
    <string name="app_name">Raveled</string>

    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="notebook">Notebook</string>
    
    <string name="filter">Filter</string>
    <string name="clear">Clear</string>
    <string name="sort_best">Best match</string>
    <string name="sort_hot">Hot right now</string>
    <string name="sort_name">Name</string>
    <string name="sort_popularity">Most popular</string>
    <string name="sort_projects">Most projects</string>
    <string name="sort_favorites">Most favorites</string>
    <string name="sort_queues">Most queued</string>
    <string name="sort_publication">Publication date</string>
    <string name="sort_new">New to Ravelry</string>
    <string name="sort_rating">Rating</string>
    <string name="sort_difficulty">Difficulty</string>
    <string name="sort_yarn">Yarn required</string>
    <string name="sort_by">Sort by</string>
    <string name="filter_by">Filter by</string>
    <string name="filter_by_craft">Craft</string>
    <string name="filter_crochet">Crochet</string>
    <string name="filter_knitting">Knitting</string>
    <string name="filter_by_category">Category</string>
    <string name="filter_pullover">Pullover</string>
    <string name="filter_cardigan">Cardigan</string>
    <string name="filter_top">Top</string>
    <string name="filter_hat">Hat</string>
    <string name="filter_hands">Hands</string>
    <string name="filter_cowl">Cowl</string>
    <string name="filter_scarf">Scarf</string>
    <string name="filter_shawl">Shawl</string>
    <string name="filter_socks">Socks</string>
    <string name="filter_toys">Toys</string>
    <string name="filter_by_meterage">Meterage</string>
    <string name="filter_by_colors">Colors</string>
    <string name="filter_by_needle_size">Needle size</string>

    <string name="favorite">Favorite</string>
    <string name="unfavorite">Unfavorite</string>
    <string name="unqueue">Unqueue</string>
    <string name="in_library">In library</string>

    <string name="patterns">Patterns</string>
    <string name="yarns">Yarns</string>
    <string name="people">People</string>
    <string name="groups">Groups</string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>

    <string name="tiret"> —  %1$s</string>

    <string name="designed_by">By %1$s</string>

    <string name="use_yarn">Use yarn</string>
    <string name="notes">Notes</string>

    <string name="needle_size">Needle size</string>
    <string name="yarn_weight">Yarn weight</string>
    <string name="yardage">Yardage</string>
    <string name="gauge">Gauge</string>
    <string name="description">Description</string>

    <string name="projects">Projects</string>
    <string name="queue">Queue</string>
    <string name="favorites">Favorites</string>
</resources>
